-----
2019-11-07  Masa Sakano
  * Modified .github/README.md

-----
(Version: 0.6)
2019-11-07  Masa Sakano
  * Introduces a new concept "Para" and accordingly renamed some methods like Part#parts to Part#paras

-----
(Version: 0.5.1)
2019-11-07  Masa Sakano
  * Minor update of gemspec (for RubyGems.org).

-----
(Version: 0.5)
2019-11-07  Masa Sakano
  * bin/head.rb, bin/tail.rb (hence `lib/plain_text.rb`)
    * "-p|--padding" option added.
    * Algorithm in `PlainText#tail_regexp` well simplified.
    * Some boundary-condtion bugs fixed.
  * `PlainText#Split` (`lib/plain_text/split.rb`)
    * Added public methods {#count_regexp} and {#count_lines} and their corresponding class methods.
  * New Ruby executable script: `bin/yard2md_afterclean`

-----
2019-11-06  Masa Sakano
  * head.rb, tail.rb
    * "-i|--[no]-inverse" command-line option renamed to "-r|--[no-]reverse"
    * "-i|--[no-]ignore-case" option added.
    * "-m|--[no-]multi-line" option added.

-----
2019-11-06  Masa Sakano
  * PlainText::Util (`plain_text/util.rb`)
    * All the methods are now private.
    * New dedicated test code file: `lib/plain_text/util.rb`
  * PlainText::Part (`plain_text/part.rb`)
    * Two new public methods `merge_para!` and `merge_para_if`
  * head.rb, tail.rb (hence `plain_text.rb`)
    * Fixed a critical bug in the null case with a Regexp option.

-----
(Version: 0.4)
2019-10-29  Masa Sakano
  * Changed the names in PlainText::Part.(map|each)_boundaries_* to boundary, and similarly parts to part

-----
(Version: 0.3)
2019-10-27  Masa Sakano
  * Added 3 executables textclean, head.rb, tail.rb in bin/ together with their tests
  * lib/plaintext.rb refactoring
    * Added a new constant `DEF_METHOD_OPTS`
  * bin/countchar refactoring

-----
(Version: 0.3)
2019-10-27  Masa Sakano
  * Added 3 executables textclean, head.rb, tail.rb in bin/ together with their tests
  * lib/plaintext.rb refactoring
    * Added a new constant `DEF_METHOD_OPTS`
  * bin/countchar refactoring

-----